# HERBS

./: AUTHOR.txt  LICENSE.txt  MANIFEST.in  README.md  THANKS.txt  UpdateLog.md  pyproject.toml  setup.cfg  setup.py
Extra_Data/Allen_Mouse_10um/: atlas_axis_info.pkl
Extra_Data/Allen_Mouse_25um/: atlas_axis_info.pkl
Extra_Data/Allen_Mouse_50um/: atlas_axis_info.pkl
Extra_Data/Waxholm_Rat/: atlas_axis_info.pkl
Tutorial/: How_to_upload_and_process_user_defined_atlases.md  create_enviroment_in_Anaconda.md  download_waxholm_rat_atlas.md  install_through_pycharm.md  upload_external_cell_points.md
Tutorial/Atlas_Related/: about_atlas_through_herbs.md  upload_slice_atlas.md
Tutorial/External_Related/: important_to_know_before_you_start.md  upload_external_cell_points.md
Tutorial/Probe_Related/: 1-Important_to_know_before_you_start.md  2-Pre-Plan_NP1.md  3-Pre-Plan_NP2.md  4-Design_Linear_Silicon_Probe.md  5-Design_multi_shanks_Probes.md  Design_multi_shanks_Probes.md  Pre-Plan_NP1.md
data/: main_window.ui
herbs/: __init__.py  about_herbs.py  allen_ccf_test.py  allen_downloader.py  atlas_downloader.py  atlas_loader.py  atlas_processor.py  atlas_view.py  czi_reader.py  ddd  herbs.py  herbsgui.py  image_curves.py  image_reader.py  image_stacks.py  image_view.py  label_tree.py  layers_control.py  main_window.ui  movable_points.py  new_file  obj_items.py  object_control.py  popup_message.py  probe_utiles.py  run_herbs.py  slice_stacks.py  slice_view.py  styles.py  toolbox.py  triangulation_points.py  uuuuuu.py  widgets_utils.py  wtiles.py
herbs/data/: WHS_atlas_labels.pkl  allen_mice_atlas_labels.pkl  atlas_path.txt
herbs/icons/: check_layer.txt  labels.txt  layers.rtf
herbs/qss/: atlas_view_group_box.qss  box_label.qss  channel_selector.qss  color_combo.qss  decor_label.qss  dialogs.qss  hidden_line_edit.qss  label_tree.qss  main_window.qss  menu_bar.qss  multi_handle_slider.qss  obj_ctrl_bottom_button.qss  object_text_button.qss  page_control.qss  rotation_button.qss  side_bar.qss  spinbox.qss  tabs.qss  tool_bar.qss
