[metadata]
name = herbs
version = 0.0.1
author = Jingyi Guo Fuglstad
author_email = Jingyi.g.fuglstad@gmail.com
description = A toolkit for Histological E-data Registration in Brain Space
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JingyiGF/HERBS
project_urls =
    Bug Tracker = https://github.com/JingyiGF/HERBS/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
