[metadata]
name = herbs
version = 0.0.2
url = https://github.com/JingyiGF/HERBS
author = Jingyi GF
maintainer = Jingyi GF
maintainer_email = jingyi.g.fuglstad@gmail.com
keywords = medical image processing, brain atlas, histological image registration, probe coordinates
classifiers = 
	Development Status :: 3 - Alpha
	Intended Audience :: Science/Research
	Intended Audience :: Developers
	Intended Audience :: Education
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3 :: Only
	Topic :: Software Development
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Image Processing
	Topic :: Scientific/Engineering :: Medical Science Apps
	Typing :: Typed
	Operating System :: Microsoft :: Windows
	Operating System :: POSIX
	Operating System :: Unix
	Operating System :: MacOS
license = Apache license
license_file = LICENSE
description = A Python-based GUI for Histological E-data Registration in Brain Space
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = OS Independent
project_urls = 
	Bug Tracker = https://github.com/JingyiGF/HERBS/issues
	

[options]
packages = find:herbs
python_requires = >=3.8 <3.11
install_requires = 
	PyQt5 == 5.14.2
	pyqtgraph == 0.12.3
	PyOpenGL == 3.1.5
	QtRangeSlider == 0.1.5
	opencv-python
	numba
	numpy
	scipy
	shutil
	requests
	csv
	nibabel
	pynrrd
	tifffile
	aicspylibczi
	pandas
	natsort
	imagecodecs
	random
	h5py
	tables
